fixed text align for posts on Home page

--- a/front_end/src/pages/Home.css
+++ b/front_end/src/pages/Home.css
@@ -1,10 +1,13 @@
 #home-cont {
     height: 75vh; /* Container is 75% of the viewport height */
     margin-top: 5vh; /* Spacing between navbar and container */
+}
+
+.spinner-cont {
     text-align: center;
 }
 
-#home-cont .spinner-border {
+.spinner-border {
     height: 100px;
     width: 100px;
 }
